# jerjerrod

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: formatting.yml
jerjerrod/: __init__.py  caching.py  cli.py  config.py  powerline.py  projects.py
jerjerrod/cli/: entrypoint.py  utils.py
