[tool.poetry]
name = "jerjerrod"
version = "0.0.0"
description = "Tool to summarise the working state of VCS repo folders, or folders containing multiple VCS repos."
authors = ["Peter Hodge"]
license = "MIT"
homepage = "https://github.com/phodge/jerjerrod"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
simplejson = "^3.17.6"
GitPython = "^3.1.27"
diskcache = "^5.4.0"
xdg = "^5.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
